--- a/etc/supervisor/supervisord.conf
+++ b/etc/supervisor/supervisord.conf
@@ -17,7 +17,9 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 ;serverurl=http://127.0.0.1:9001
-serverurl=http://127.0.0.1:9001
+;serverurl=http://:9001
+serverurl=http://localhost:8080
+
 
 
 [rpcinterface:supervisor]
@@ -26,7 +28,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [inet_http_server]
 port = :9001
 [unix_http_server]
-file=/var/run//supervisor.sock   ; (the path to the socket file)
+file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
 
 ; The [include] section can just contain the "files" setting.  This
